--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -15,6 +15,7 @@
     padding-bottom: 0.625rem;
     background-color: #CAF0F8;
     z-index: 1;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
 }
 
 .links {
